voice commands (testing)

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,5 +1,78 @@
 <resources>
+	<!-- App -->
 	<string name="app_name">Encuentrame! Fire</string>
+	<string name="app_desc">\nAplicación para la gestión de lugares de interés, con avisos por geo-posicionamiento y registro de rutas. Podrás administrar  tus geo-datos fácilmente, pues serán almacenados en la nube.\n\n</string>
+	<string name="app_lice_tit">Licencia:</string>
+	<string name="app_vers_tit">Versión:</string>
+
+
+
+
+
+
+
+	<string name="activo">Activo</string>
+	<string name="aviso">Mensaje de aviso</string>
+	<string name="cargando">Cargando…</string>
+	<string name="categoria">Categoría</string>
+	<string name="clave">Clave</string>
+	<string name="clave_confirmar">Confirmar Clave</string>
+	<string name="config">Preferencias</string>
+	<string name="privacy_policy">Política de Privacidad</string>
+	<string name="configuracion">Configuración</string>
+	<string name="cuenta">Cuenta</string>
+	<string name="descripcion">Descripción</string>
+	<string name="direccion">Dirección…</string>
+	<string name="estadisticas">Estadísticas</string>
+	<string name="estadisticas_format" formatted="false">Longitud:\t\t\t\t\t\t%s\nTiempo:\t\t\t\t\t\t\t%s\nVelocidad.Med:\t\t%s\nVelocidad Min:\t\t%s\nVelocidad Max:\t\t%s\nAltitud Min:\t\t\t\t%s\nAltitud Max:\t\t\t\t%s\n</string>
+	<string name="en_zona_aviso">En zona de aviso</string>
+	<string name="enter_lbl">Introduce tu usuario</string>
+	<string name="nombre">Nombre</string>
+	<string name="radio">Radio</string>
+	<string name="periodo">Periodo</string>
+	<string name="lista_vacia">Lista vacía…</string>
+	<string name="voz_onoff">Voz</string>
+	<string name="activos">ACTIVOS</string>
+	<string name="inactivos">INACTIVOS</string>
+	<string name="on_timeout">Latencia excesiva, compruebe conexión a Internet</string>
+
+	<!-- Actions -->
+	<string name="guardar">Guardar</string>
+	<string name="enter">Entrar</string>
+	<string name="start">Iniciar</string>
+	<string name="stop">Detener</string>
+	<string name="salir">Salir</string>
+	<string name="ver_mapa">Ver mapa</string>
+	<string name="eliminar">Eliminar</string>
+	<string name="cancelar">Cancelar</string>
+	<string name="buscar">Buscar</string>
+	<string name="actualizar_posicion">Actualizar posición</string>
+
+	<!-- Items -->
+	<string name="lugares">Lugares</string>
+	<string name="rutas">Rutas</string>
+	<string name="avisos">Avisos</string>
+
+	<!-- Editar -->
+	<string name="editar">Editar</string>
+	<string name="editar_lugar">Editar Lugar</string>
+	<string name="editar_aviso">Editar Aviso</string>
+	<string name="editar_ruta">Editar Ruta</string>
+
+	<!-- Fecha -->
+	<string name="fecha">Fecha</string>
+	<string name="fecha_desde">Del</string>
+	<string name="fecha_hasta">al</string>
+	<string name="fin">Fin: </string>
+	<string name="ini">Ini: </string>
+
+	<!-- Nuevo -->
+	<string name="nuevo">Nuevo</string>
+	<string name="nuevo_lugar">Nuevo Lugar</string>
+	<string name="nuevo_aviso">Nuevo Aviso</string>
+	<string name="nueva_ruta">Nueva Ruta</string>
+
+	<!-- Title -->
 	<string name="title_activity_act_main">Encuentrame!</string>
 	<string name="title_activity_act_maps">Mapa</string>
 	<string name="title_activity_act_config">Configuración</string>
@@ -7,140 +80,70 @@
 	<string name="title_activity_act_aviso">Aviso</string>
 	<string name="title_activity_act_lugar">Lugar</string>
 	<string name="title_activity_act_buscar">Buscar</string>
+	<string name="title_act_imagen">Imagen</string>
 
-	<string name="app_desc">\nAplicación para la gestión de lugares de interés, con avisos por geo-posicionamiento y registro de rutas. Podrás administrar  tus geo-datos fácilmente, pues serán almacenados en la nube.\n\n</string>
-	<string name="app_lice_tit">Licencia:</string>
-	<string name="app_vers_tit">Versión:</string>
+	<!-- Imagen -->
+	<string name="imagen">Imagen</string>
+	<string name="guardar_imagen">Guardar la imagen</string>
+	<string name="tomar_imagen">Tomar imagen</string>
+	<string name="error_img_path">Sucedió un error al recuperar la imagen de la cámara</string>
 
-	<string name="cuenta">Cuenta</string>
-	<string name="config">Preferencias</string>
-	<string name="lugares">Lugares</string>
-	<string name="rutas">Rutas</string>
-	<string name="avisos">Avisos</string>
+	<!-- Widget -->
+	<string name="widget_lugar">Lugares</string>
+	<string name="widget_ruta">Rutas</string>
 
-	<string name="clave">Clave</string>
-	<string name="clave_confirmar">Confirmar Clave</string>
-	<string name="enter">Entrar</string>
-	<string name="register">Registrate</string>
-	<string name="recover">Recordar</string>
-	<string name="login">Iniciar sesión</string>
-
-	<string name="enter_lbl">Introduce tu usuario</string>
-	<string name="register_lbl">Crea una cuenta</string>
-	<string name="recover_lbl">Recupera tu clave</string>
-
-	<string name="recover_ok">Te hemos enviado un correo \n para que recurperes la cuenta</string>
+	<!-- Recover -->
 	<string name="recover_ko">Ocurrió un error al recuperar \n la cuenta de usuario</string>
+	<string name="recover_lbl">Recupera tu clave</string>
+	<string name="recover">Recordar</string>
+	<string name="recover_ok">Te hemos enviado un correo \n para que recurperes la cuenta</string>
+
+	<!-- Register -->
+	<string name="register">Registrate</string>
+	<string name="register_lbl">Crea una cuenta</string>
 	<string name="register_ok">¡Te has registrado con éxito! \n Ahora comprueba tu correo</string>
 	<string name="register_bad_pass">¡Atención, ambas claves deben ser iguales!</string>
-
-	<string name="guardar">Guardar</string>
-	<string name="editar">Editar</string>
-	<string name="eliminar">Eliminar</string>
-	<string name="cancelar">Cancelar</string>
-	<string name="direccion">Dirección…</string>
-	<string name="imagen">Imagen</string>
-	<string name="nuevo">Nuevo</string>
-	<string name="actualizar_posicion">Actualizar posición</string>
-	<string name="ver_mapa">Ver mapa</string>
-	<string name="configuracion">Configuración</string>
-	<string name="buscar">Buscar</string>
-
-	<string name="activo">Activo</string>
-	<string name="nombre">Nombre</string>
-	<string name="descripcion">Descripción</string>
-	<string name="aviso">Mensaje de aviso</string>
-	<string name="categoria">Categoría</string>
-	<string name="fecha">Fecha</string>
-	<string name="sin_posicion">Sin posición</string>
-	<string name="seguro_eliminar">¿Seguro que desea eliminar?</string>
-	<string name="seguro_salir">Ha hecho cambios. ¿Quiere guardarlos?</string>
-	<string name="en_zona_aviso">En zona de aviso</string>
-
-	<string name="salir">Salir</string>
-	<string name="nuevo_lugar">Nuevo Lugar</string>
-	<string name="nuevo_aviso">Nuevo Aviso</string>
-	<string name="nueva_ruta">Nueva Ruta</string>
-	<string name="editar_lugar">Editar Lugar</string>
-	<string name="editar_aviso">Editar Aviso</string>
-	<string name="editar_ruta">Editar Ruta</string>
-
-	<string name="radio">Radio</string>
-
-	<string name="periodo">Periodo</string>
-	<string name="start">Iniciar</string>
-	<string name="stop">Detener</string>
-	<string name="ini">Ini: </string>
-	<string name="fin">Fin: </string>
-	<string name="fecha_desde">Del</string>
-	<string name="fecha_hasta">al</string>
-
-	<string name="error_eliminar">Error al eliminar: %s</string>
-	<string name="ok_guardar_lugar">Se guardaron los datos del lugar</string>
-	<string name="ok_guardar_aviso">Se guardaron los datos del aviso</string>
-	<string name="ok_guardar_ruta">Se guardaron los datos de la ruta</string>
-	<string name="error_guardar">Hubo un problema al guardar los datos del registro: %s</string>
-	<string name="sin_nombre">Debe establecer un nombre…</string>
-	<string name="sin_lugar">Debe establecer una posición…</string>
-	<string name="sin_filtro">Se eliminaron los parámetros de búsqueda</string>
-	<string name="ok_stop_tracking">La ruta termina aquí</string>
-	<string name="cargando">Cargando…</string>
-	<string name="lista_vacia">Lista vacía…</string>
-
-
-	<string name="pref_header_opciones">Opciones</string>
-	<string name="pref_save_login">Guardar usuario y contraseña</string>
-	<string name="pref_auto_arranque">Arracar Avisos al Inicio</string>
-
-	<string name="pref_header_notifications">Avisos</string>
-	<string name="pref_msg_notif_type">Mostrar diálogos PopUp</string>
-	<string name="pref_ringtone">Tono</string>
-	<string name="pref_ringtone_silent">Silencio</string>
-	<string name="pref_vibrate">Vibrar</string>
-	<string name="pref_lights">Luces</string>
-
-	<string name="activos">ACTIVOS</string>
-	<string name="inactivos">INACTIVOS</string>
-	<string name="pref_header_logout">Salir</string>
-	<string name="pref_header_logout_sum">Cerrar la sesión actual</string>
-	<string name="pref_header_about">Sobre esta App..</string>
-	<string name="pref_header_notifications_sum">Configuración de avisos…</string>
-	<string name="pref_header_opciones_sum">Configuraciones…</string>
-	<string name="login_error">Usuario o contraseña incorrectas</string>
-	<string name="login_fisrt">Entre en su cuenta primero</string>
 	<string name="register_ko">Ocurrió un error al \n registrar el usuario \n Inténtelo de nuevo, por favor.</string>
-	<string name="login_timeout">Tiempo de espera excedido</string>
+
+	<!-- Error -->
+	<string name="err_get_ruta_pts">Error al obtener los puntos de la ruta</string>
+	<string name="err_conn_google">Error al conectar a los servicios de Google: %s</string>
+	<string name="no_camera_hardware">Este dispositivo no tiene cámara</string>
+	<string name="error_eliminar">Error al eliminar: %s</string>
+	<string name="error_guardar">Hubo un problema al guardar los datos del registro: %s</string>
+
+	<!-- Ok -->
+	<string name="ok">Aceptar</string>
 	<string name="ok_eliminar_aviso">Se eliminó el lugar</string>
 	<string name="ok_eliminar_lugar">Se eliminó el aviso</string>
 	<string name="ok_eliminar_ruta">Se eliminó la ruta</string>
-	<string name="on_timeout">Latencia excesiva, compruebe conexión a Internet</string>
+	<string name="ok_guardar_lugar">Se guardaron los datos del lugar</string>
+	<string name="ok_guardar_aviso">Se guardaron los datos del aviso</string>
+	<string name="ok_guardar_ruta">Se guardaron los datos de la ruta</string>
+	<string name="ok_stop_tracking">La ruta termina aquí</string>
 
-	<string name="widget_lugar">Lugares</string>
-	<string name="widget_ruta">Rutas</string>
-	<string name="login_ok">Bienvenido %s</string>
-	<string name="info_time">Fecha: </string>
-	<string name="info_prec">\nPrecisión: %.2f m\n</string>
-	<string name="info_dist">\nDistancia: %.0f m</string>
-	<string name="info_dist2">\nDistancia: %.1f km</string>
-	<string name="info_alt">\nAltitud: %.0f m</string>
-	<string name="info_nor">\nNorte: %.0f º</string>
-	<string name="info_speed">\nVelocidad: %.2f m/s</string>
-	<string name="info_speed2">\nVelocidad: %.0f km/h</string>
-	<string name="guardar_imagen">Guardar la imagen</string>
-	<string name="tomar_imagen">Tomar imagen</string>
-	<string name="title_act_imagen">Imagen</string>
-	<string name="sin_camara">Este dispositivo no tiene cámara</string>
-	<string name="estadisticas">Estadísticas</string>
-	<string name="estadisticas_format" formatted="false">Longitud:\t\t\t\t\t\t%s\nTiempo:\t\t\t\t\t\t\t%s\nVelocidad.Med:\t\t%s\nVelocidad Min:\t\t%s\nVelocidad Max:\t\t%s\nAltitud Min:\t\t\t\t%s\nAltitud Max:\t\t\t\t%s\n</string>
-	<string name="sin_permiso_camara">Sin permiso para usar la cámara</string>
-	<string name="err_get_ruta_pts">Error al obtener los puntos de la ruta</string>
-	<string name="err_conn_google">Error al conectar a los servicios de Google: %s</string>
-	<string name="privacy_policy">Política de Privacidad</string>
-	<string name="no_camera_hardware">Este dispositivo no tiene cámara</string>
-    <string name="error_img_path">Sucedió un error al recuperar la imagen de la cámara</string>
-
+	<!-- Ask -->
+	<string name="seguro_salir">Ha hecho cambios. ¿Quiere guardarlos?</string>
+	<string name="seguro_eliminar">¿Seguro que desea eliminar?</string>
 	<string name="ask_to_ignore_energy_saving_again">Al apagarse la pantalla, el tracking se detendrá si no desactiva las optimizaciones de batería. Está seguro?</string>
+	<string name="ask_to_enable_gps">El servicio de rastreo necesita que actives la localización por GPS</string>
 
+	<!-- Sin -->
+	<string name="sin_filtro">Se eliminaron los parámetros de búsqueda</string>
+	<string name="sin_posicion">Sin posición</string>
+	<string name="sin_nombre">Debe establecer un nombre…</string>
+	<string name="sin_lugar">Debe establecer una posición…</string>
+	<string name="sin_camara">Este dispositivo no tiene cámara</string>
+	<string name="sin_permiso_camara">Sin permiso para usar la cámara</string>
+
+	<!-- Login -->
+	<string name="login">Iniciar sesión</string>
+	<string name="login_error">Usuario o contraseña incorrectas</string>
+	<string name="login_fisrt">Entre en su cuenta primero</string>
+	<string name="login_timeout">Tiempo de espera excedido</string>
+	<string name="login_ok">Bienvenido %s</string>
+
+	<!-- Estado -->
 	<string name="in_vehicle">En un vehículo</string>
 	<string name="on_bicycle">En bicicleta</string>
 	<string name="on_foot">De pie</string>
@@ -150,8 +153,47 @@
 	<string name="unknown">Actividad desconocida</string>
 	<string name="walking">Caminando</string>
 	<string name="unidentifiable_activity">Actividad no identificada: %1$d</string>
-	<string name="ask_to_enable_gps">El servicio de rastreo necesita que actives la localización por GPS</string>
-	<string name="ok">Aceptar</string>
+
+	<!-- Preferencias -->
+	<string name="pref_header_opciones">Opciones</string>
+	<string name="pref_save_login">Guardar usuario y contraseña</string>
+	<string name="pref_auto_arranque">Arracar Avisos al Inicio</string>
+	<string name="pref_header_notifications">Avisos</string>
+	<string name="pref_msg_notif_type">Mostrar diálogos PopUp</string>
+	<string name="pref_ringtone">Tono</string>
+	<string name="pref_ringtone_silent">Silencio</string>
+	<string name="pref_vibrate">Vibrar</string>
+	<string name="pref_lights">Luces</string>
+	<string name="pref_header_logout">Salir</string>
+	<string name="pref_header_logout_sum">Cerrar la sesión actual</string>
+	<string name="pref_header_about">Sobre esta App..</string>
+	<string name="pref_header_notifications_sum">Configuración de avisos…</string>
+	<string name="pref_header_opciones_sum">Configuraciones…</string>
     <string name="pref_save_all">Incluir puntos imprecisos</string>
     <string name="pref_tracking_seconds">Periodo rastreo (segundos)</string>
+
+	<!-- Info -->
+	<string name="info_time">Fecha: </string>
+	<string name="info_prec">\nPrecisión: %.2f m\n</string>
+	<string name="info_dist">\nDistancia: %.0f m</string>
+	<string name="info_dist2">\nDistancia: %.1f km</string>
+	<string name="info_alt">\nAltitud: %.0f m</string>
+	<string name="info_nor">\nNorte: %.0f º</string>
+	<string name="info_speed">\nVelocidad: %.2f m/s</string>
+	<string name="info_speed2">\nVelocidad: %.0f km/h</string>
+
+
+	<!-- Commands -->
+	<string name="voice_new_point">Nuevo punto</string>
+	<string name="voice_new_route">Nueva ruta</string>
+	<string name="voice_new_alert">Nueva alerta</string>
+	<string name="voice_start">Empezar</string>
+	<string name="voice_save">Guardar</string>
+	<string name="voice_cancel">Cancelar</string>
+	<string name="voice_name">Nombre</string>
+	<string name="voice_description">Descripcion</string>
+	<string name="voice_radious">Radio</string>
+	<string name="voice_metres">Metro</string>
+	<string name="voice_kilometers">Kilometros</string>
+
 </resources>
